--- a/templates/home.html
+++ b/templates/home.html
@@ -108,7 +108,6 @@
   <main id="main">
 
 
-   
 
  
   
@@ -145,7 +144,7 @@
                             <!--<i class="icon-book-open primary font-large-2 float-right"></i>-->
                           </div>
                         </div>
-                        <div class="progress mt-1 mb-0" style="height: 7px;">
+                        <div class="progress mt-1 mb-0" style="height: 7px;" data-aos="fade-up" data-aos-offset="50"data-aos="zoom-in">
                           <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
@@ -153,7 +152,7 @@
                   </div>
                 </div>
                 <div class="col-xl-3 col-sm-6 col-12">
-                  <div class="card">
+                  <div class="card" >
                     <div class="card-content">
                       <div class="card-body">
                         <div class="media d-flex">
@@ -167,7 +166,7 @@
                            
                           </div>
                         </div>
-                        <div class="progress mt-1 mb-0" style="height: 7px;">
+                        <div class="progress mt-1 mb-0" style="height: 7px;" data-aos="fade-left" data-aos-offset="100">
                           <div class="progress-bar bg-warning" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
@@ -188,7 +187,7 @@
                            
                           </div>
                         </div>
-                        <div class="progress mt-1 mb-0" style="height: 7px;">
+                        <div class="progress mt-1 mb-0" style="height: 7px;" data-aos="fade-right" data-aos-offset="100">
                           <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
@@ -202,13 +201,13 @@
                         <div class="media d-flex">
                           <div class="media-body text-left">
                             <h3 class="danger">423+</h3>
-                            <span>Each Month</span>
+                            <span>Reach Each Month</span>
                           </div>
                           <div class="align-self-center">
                             
                           </div>
                         </div>
-                        <div class="progress mt-1 mb-0" style="height: 7px;">
+                        <div class="progress mt-1 mb-0" style="height: 7px;" data-aos="fade-up" data-aos-offset="100">
                           <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
@@ -322,19 +321,7 @@
   
    
     
-            <div class="video-section">
-              <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
-                <iframe width="100%" height="100%" src="https://video-previews.elements.envatousercontent.com/h264-video-previews/31fa9073-edbd-4e32-854f-513457b95c46/28421817.mp4" muted  frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="box-shadow: 0 2px 10px -3px #493c3e;" allowfullscreen controls autoplay></iframe>
-              </div> 
-             
-              <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
-                <p>In a fast-moving and increasingly complex global economy, Strong Skills International success depends on how faithfully we adhere to our core principles: delivering exceptional client service; acting with integrity and responsibility; and supporting the growth of our employees.</p>
-                <p><b>Built on Principle:</b> <br>
-                  Strong Skills International is one of the strongest and most skillful divers group in the United States. With a history dating back over a decade, here's where we stand today:</p>
-                <a href="events.html" style="border:solid 2px; border-radius:30px; width:190px; padding:10px;" class="btn-learn-more">Explore More</a>
-              </div>
-            </div>
-          </div>
+          
           
 
       
@@ -389,7 +376,7 @@
     
     <!--  End of About Service -->
      <!-- ======= Cta Section ======= -->
-     <section id="cta" class="cta">
+     <section id="ca" class="ca">
       <div class="container">
         
         <div class="text-center" >
@@ -397,7 +384,7 @@
             <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
               <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Sustainability</h6>
               <h1 style="color:white;text-align:left;"><b>Building prosperity & self-sufficiency</b></h1>
-              <h5 style="color:white; margin-bottom:10px; text-align:left;"> Our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
+              <h5 style="color:white; margin-bottom:10px; text-align:left;"> Our approach to sustainability goes beyond compliance with regulatory expectations. We are driven by a desire to contribute to and positively impact the development of <br> the society.
                 <div class="section-titl" style="display:flex;margin-top:30px;">
                   <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
                   <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
@@ -423,6 +410,7 @@
                           <div class="media-body text-right">
                             <h3>278</h3>
                             <span>Reviews</span>
+                            
                           </div>
                         </div>
                       </div>
