--- a/templates/contact.html
+++ b/templates/contact.html
@@ -54,7 +54,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="/">Home</a></li>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li class="dropdown"><a href="/about"><span>About Us <i class="fa fa-arrow-down"></i> </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="/about">Who We Are </a></li>
@@ -78,7 +78,7 @@
           <li><a href="#">Strongskill Foundation</a></li>
            
           <li><a href="/blog">Media</a></li>
-          <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
+          <li><a class="nav-link scrollto active" href="/contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
