--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,9 @@
           <li><a href="/blog">Media</a></li>
           <li><a class="nav-link scrollto" href="/contact">Contact</a></li>
         </ul>
+        
         <i class="bi bi-list mobile-nav-toggle"></i>
+       
       </nav><!-- .navbar -->
 
     </div>
@@ -1186,7 +1188,7 @@
         </div>
     </div>
 </footer>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="icon-rocket danger font-large-1 float-right" ></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
